--- a/.github/workflows/run-notebook.yml
+++ b/.github/workflows/run-notebook.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install nbformat nbconvert jupyter numpy pandas pyxirr pytz yfinance==0.2.59 matplotlib
+        pip install nbformat nbconvert jupyter numpy pandas==2.2.2 pyxirr pytz yfinance==0.2.59 matplotlib
 
     - name: Run Jupyter Notebook
       run: |
